<resources>
    <string name="app_name">Donator</string>
    <string name="email">E-mail</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sviPodaciLogin">All fields required.</string>
    <string name="emailLogin">E-mail required.</string>
    <string name="lozinkaLoginAct">Password required.</string>
    <string name="emailValidacija">You must enter correct e-mail.</string>
    <string name="error">Error</string>
    <string name="btnProceed">Proceed</string>
    <string name="btnCancel">Cancel</string>
    <string name="lozReg">Password required.</string>
    <string name="emailValidacijaReg">You must enter correct e-mail.</string>
    <string name="lozPotReg">You must confirm password.</string>
    <string name="lozViseSest">More than 6 password symbols required.</string>
    <string name="lozPoklapanje">Passwords do not match.</string>
    <string name="sviPodaciReg">All fields required.</string>
    <string name="emailRegi">E-mail required.</string>
    <string name="registerBtn">Register</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="phoneNumber">Phone number</string>
    <string name="imeReg2">Name required.</string>
    <string name="prezimeReg2">Last name required.</string>
    <string name="countryRegPersonal">Country name required.</string>
    <string name="addressRegPersonal">Address required.</string>
    <string name="phoneRegPersonal">Phone number required.</string>
    <string name="title_activity_navigation_main">NavigationMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="rankings">Rankings</string>
    <string name="donate">Donate</string>
    <string name="necessary">Necessary</string>
    <string name="map">Map</string>
    <string name="request">Requests</string>
    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="logout">Log out</string>
    <string name="cancelBtn">Cancel</string>
    <string name="add">Cancel</string>
    <string name="searchLocation">Search here</string>
    <string name="search">Search</string>
    <string name="Size">Size</string>
    <string name="Name">Name</string>
    <string name="Description">Description</string>
    <string name="btnOk">OK</string>
    <string name="addPhotoProfile">Click to add photo</string>
    <string name="editConfirm">Edit</string>
    <string name="donatedProducts">Donated: </string>
    <string name="receivedProducts">Received: </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_donate">DonateActivity</string>
    <string name="title_activity_maps">Maps</string>
    <string name="title_activity_necessary">NecessaryActivity</string>
</resources>
