<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ranking"
            android:icon="@drawable/ranking"
            android:title="@string/rankings" />
        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/doniraj"
            android:title="@string/donate" />
        <item
            android:id="@+id/nav_necessary"
            android:icon="@drawable/necessary"
            android:title="@string/necessary" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/map"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_request"
            android:icon="@drawable/request"
            android:title="@string/request" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/friends" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />

    </group>


</menu>
