<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/poza"
    tools:context=".RegisterAccountActivity">


    <EditText
        android:id="@+id/emailRegisterTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordRegisterTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:password="true"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailRegisterTxt" />

    <EditText
        android:id="@+id/confirmPasswordRegisterTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/confirm_password"
        android:inputType="textPersonName"
        android:password="true"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegisterTxt" />

    <LinearLayout
        android:id="@+id/lh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordRegisterTxt">

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="120dp"
            android:layout_height="76dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/buttonshape"
            android:gravity="center"
            android:onClick="registerAccount"
            android:padding="10dp"
            android:text="@string/btnProceed"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnCancelRegisterAccount"
            android:layout_width="120dp"
            android:layout_height="76dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/buttonshape"
            android:gravity="center"
            android:onClick="cancelRegistration"
            android:padding="10dp"
            android:text="@android:string/cancel"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarRegisterAccount"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>